fix factor on smaller size

--- a/css/jibres-src/components/_printArea.scss
+++ b/css/jibres-src/components/_printArea.scss
@@ -14,8 +14,8 @@
 
   .printArea[data-size='A3']               { width: 297mm; min-height: 419mm; height: 419mm; }
   .printArea[data-size='A3.landscape']     { width: 420mm; min-height: 296mm; height: 296mm; }
-  .printArea[data-size='A4']               { width: 210mm; min-height: 296mm; height: 296mm; }
-  .printArea[data-size='A4.landscape']     { width: 297mm; min-height: 209mm; height: 209mm; }
+  .printArea[data-size='A4']               { width: 210mm; min-height: 296mm; height: 296mm; overflow-x: auto; }
+  .printArea[data-size='A4.landscape']     { width: 297mm; min-height: 209mm; height: 209mm; overflow-x: auto; }
   .printArea[data-size='A5']               { width: 148mm; min-height: 209mm; height: 209mm; }
   .printArea[data-size='A5.landscape']     { width: 210mm; min-height: 147mm; height: 147mm; }
   .printArea[data-size='A6']               { width: 105mm; min-height: 148mm; height: 148mm; }
@@ -25,6 +25,9 @@
   .printArea[data-size='legal']            { width: 216mm; min-height: 356mm; height: 356mm; }
   .printArea[data-size='legal.landscape']  { width: 357mm; min-height: 215mm; height: 215mm; }
   .printArea[data-size='receipt8']         { width: 84mm;  padding:10mm 4mm 1mm; }
+
+  .printArea[data-size='A4'] .invoice{width: 204mm;}
+  .printArea[data-size='A4.landscape'] .invoice{width: 291mm;}
 
   .printArea[data-height='auto']{height: auto;}
 }
